language/move-lang/tests/move_check/expansion/duplicate_field_assign.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_field_assign.move:5:9
  │
5 │         S { f, f } = S { f: 0 };
  │         ^^^^^^^^^^
  │         │   │  │
  │         │   │  Duplicate assignment binding given for field 'f'
  │         │   Field previously defined here
  │         Invalid deconstructing assignment

warning[W09003]: unused assignment
  ┌─ tests/move_check/expansion/duplicate_field_assign.move:5:13
  │
5 │         S { f, f } = S { f: 0 };
  │             ^ Unused assignment or binding for local 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

